--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 
 python:
   - "3.7"
+sudo: false
 
 cache: pip
 
@@ -9,4 +10,4 @@ script:
   - pipenv install
   - pytest test.py --cucumberjson="reports.json"
 
-after_script: -curl -X POST -F file=@reports.json https://studio.cucumber.io/import_test_reports/8155584402743649471744242885878660671803111913263715265/519702/cucumber-json
+after_script: curl -X POST -F file=@reports.json https://studio.cucumber.io/import_test_reports/8155584402743649471744242885878660671803111913263715265/519702/cucumber-json
